src/z80asm/z80asm2/t/20-preproc/expected/assert_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/assert_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/assert_01.asm...
# file: t/20-preproc/input/assert_01.asm
Identifier	"DEFC"	1:9	keyword=DEFC 
Identifier	"X"	1:14	keyword=X 
EQ	"="	1:16	
Integer	"1"	1:18	int_value=1 
EndOfLine	"\n"	1:19	
Define constant: X = 1
Identifier	"ld"	2:1	keyword=LD 
Identifier	"a"	2:4	keyword=A 
Comma	","	2:5	
Integer	"1"	2:7	int_value=1 
EndOfLine	"\n"	2:8	
t/20-preproc/input/assert_01.asm:3:7: error: Expected expression after ASSERT
    assert ; no arguments
          ^
Identifier	"ld"	4:1	keyword=LD 
Identifier	"a"	4:4	keyword=A 
Comma	","	4:5	
Integer	"2"	4:7	int_value=2 
EndOfLine	"\n"	4:8	
t/20-preproc/input/assert_01.asm:5:8: error: ASMPC is not allowed in a constant expression
    assert asmpc ; not constant
           ^
Identifier	"ld"	6:1	keyword=LD 
Identifier	"a"	6:4	keyword=A 
Comma	","	6:5	
Integer	"3"	6:7	int_value=3 
EndOfLine	"\n"	6:8	
t/20-preproc/input/assert_01.asm:7:10: error: Unexpected token after ASSERT
    assert X extra
             ^
Identifier	"ld"	8:1	keyword=LD 
Identifier	"a"	8:4	keyword=A 
Comma	","	8:5	
Integer	"4"	8:7	int_value=4 
EndOfLine	"\n"	8:8	
t/20-preproc/input/assert_01.asm:9:12: error: Expected string after comma in ASSERT
    assert X , extra
               ^
Identifier	"ld"	10:1	keyword=LD 
Identifier	"a"	10:4	keyword=A 
Comma	","	10:5	
Integer	"5"	10:7	int_value=5 
EndOfLine	"\n"	10:8	
t/20-preproc/input/assert_01.asm:11:20: error: Unexpected token after ASSERT
    assert X , "hello" extra
                       ^
Identifier	"ld"	12:1	keyword=LD 
Identifier	"a"	12:4	keyword=A 
Comma	","	12:5	
Integer	"6"	12:7	int_value=6 
EndOfLine	"\n"	12:8	
Identifier	"ld"	14:1	keyword=LD 
Identifier	"a"	14:4	keyword=A 
Comma	","	14:5	
Integer	"7"	14:7	int_value=7 
EndOfLine	"\n"	14:8	
t/20-preproc/input/assert_01.asm:15:8: error: Assertion failed
    assert !X ; error
           ^
Identifier	"ld"	16:1	keyword=LD 
Identifier	"a"	16:4	keyword=A 
Comma	","	16:5	
Integer	"8"	16:7	int_value=8 
EndOfLine	"\n"	16:8	
Identifier	"ld"	18:1	keyword=LD 
Identifier	"a"	18:4	keyword=A 
Comma	","	18:5	
Integer	"9"	18:7	int_value=9 
EndOfLine	"\n"	18:8	
t/20-preproc/input/assert_01.asm:19:8: error: user error
    assert !X, "user error" ; error
           ^
Identifier	"ld"	20:1	keyword=LD 
Identifier	"a"	20:4	keyword=A 
Comma	","	20:5	
Integer	"10"	20:7	int_value=10 
EndOfLine	"\n"	20:9	
